Fixed layout issue on search page for small screens.

--- a/ISS/static-src/src/base/base.less
+++ b/ISS/static-src/src/base/base.less
@@ -227,6 +227,7 @@ footer {
     margin: 0;
     padding: 10px 15px;
     border: 0;
+    width: auto;
   }
 
   input {
