--- a/ISS/static-src/src/search-results/search-results.less
+++ b/ISS/static-src/src/search-results/search-results.less
@@ -33,6 +33,10 @@
         }
       }
     }
+
+    select {
+      width: 100%;
+    }
   }
 
   .results {
